// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can call an onClick callback 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<li
  class="EntityListItem EntityListItem--is-interactive"
  data-test-id="cf-ui-entity-list-item"
>
  <a
    class="EntityListItem__inner"
    tabindex="0"
  >
    <span
      class="emotion-1 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </span>
  </a>
</li>
`;

exports[`renders the component 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-1 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </span>
  </article>
</li>
`;

exports[`renders the component as an \`a\` element if passed a href prop 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<li
  class="EntityListItem EntityListItem--is-interactive"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
    href="#"
  >
    <span
      class="emotion-1 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </span>
  </article>
</li>
`;

exports[`renders the component as an Asset with a lower-cased entityType 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-2 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-1"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component as an Asset with a title-cased entityType 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-2 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-1"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component as an asset entityType icon with an archived status 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #BD002A;
  background-color: #FFE0E0;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-2 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-1"
            data-test-id="cf-ui-badge"
          >
            archived
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component as an asset entityType variant 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-2 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <g>
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
            <path
              d="M14.14 11.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
            />
          </g>
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-1"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component as an asset thumbnail preview 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-1 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <img
          alt="Something clever"
          class="EntityListItem__thumbnail"
          src="https://path/to/thumbnail.jpg"
        />
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-0"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component as isLoading 1`] = `
.emotion-0 {
  display: block;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <svg
      aria-label="Loading component..."
      class="emotion-0"
      data-test-id="cf-ui-skeleton-form"
      height="100%"
      preserveAspectRatio="xMidYMid meet"
      role="img"
      width="100%"
    >
      <title>
        Loading component...
      </title>
      <rect
        clip-path="url(#f36-entity-list-item-skeleton)"
        height="100%"
        style="fill: url(#cf-ui-skeleton-clip-gradient-0);"
        width="100%"
        x="0"
        y="0"
      />
      <defs>
        <clippath
          id="f36-entity-list-item-skeleton"
        >
          <rect
            data-test-id="cf-ui-skeleton-image"
            height="46"
            rx="0"
            ry="0"
            width="46"
          />
          <rect
            height="18"
            rx="0"
            ry="0"
            width="100%"
            x="54"
            y="0"
          />
          <rect
            height="18"
            rx="0"
            ry="0"
            width="80%"
            x="54"
            y="26"
          />
        </clippath>
        <lineargradient
          id="cf-ui-skeleton-clip-gradient-0"
        >
          <stop
            offset="0%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              dur="2s"
              id="animation-1"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="50%"
            stop-color="#f7f9fa"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-1.begin+0.25s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
          <stop
            offset="100%"
            stop-color="#e5ebed"
            stop-opacity="1"
          >
            <animate
              attributeName="stop-color"
              begin="animation-1.begin+0.5s"
              dur="2s"
              repeatCount="indefinite"
              values="#e5ebed; #f7f9fa; #e5ebed"
            />
          </stop>
        </lineargradient>
      </defs>
    </svg>
  </article>
</li>
`;

exports[`renders the component with a description 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-1 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </span>
  </article>
</li>
`;

exports[`renders the component with a drag handle 1`] = `
.emotion-1 {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.emotion-2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F7F9FA;
  border: 0;
  border-bottom-left-radius: 6px;
  border-right: 1px solid #CFD9E0;
  border-top-left-radius: 6px;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0;
  position: relative;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  width: 1.5rem;
}

.emotion-2:hover,
.emotion-2:focus {
  background-color: #E7EBEE;
}

.emotion-5 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-4 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <div
    class="emotion-2 EntityListItem__dragHandle"
    testid="cf-ui-drag-handle"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="emotion-1"
    >
      Reorder entry
    </span>
  </div>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-5 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-4"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component with a status 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-2 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-1"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component with active drag state 1`] = `
.emotion-2 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem EntityListItem--drag-active"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-2 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-1"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<li
  class="EntityListItem my-extra-class"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-1 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </span>
  </article>
</li>
`;

exports[`renders the component with custom drag handle 1`] = `
.emotion-3 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-2 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="emotion-0"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder card
    </span>
  </div>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-3 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-2"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
      </div>
    </span>
  </article>
</li>
`;

exports[`renders the component with disabled actions 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<li
  class="EntityListItem my-extra-class"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner"
  >
    <span
      class="emotion-1 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      />
    </span>
  </article>
</li>
`;

exports[`renders the component with dropdownListElements 1`] = `
.emotion-4 {
  display: inline-block;
}

.emotion-6 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

.emotion-1 {
  display: inline-block;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
  font-weight: 600;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.06rem;
  -moz-letter-spacing: 0.06rem;
  -ms-letter-spacing: 0.06rem;
  letter-spacing: 0.06rem;
  border-radius: 4px;
  color: #006D23;
  background-color: #CDF3C6;
  padding: 0 0.5rem;
  font-size: calc(1rem * (12 / 16));
  line-height: 20px;
  max-height: 20px;
}

.emotion-5 {
  box-sizing: border-box;
  border: 1px solid;
  box-shadow: none;
  border-radius: 6px;
  cursor: pointer;
  opacity: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  min-width: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: 500;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: background-color 0.2s ease-in-out;
  transition: background-color 0.2s ease-in-out;
  color: #1B273A;
  background: none;
  border-color: transparent;
  font-size: 0.875rem;
  line-height: 1.25;
  padding: 0.5rem 1rem;
  min-height: 40px;
}

.emotion-5:hover {
  background-color: #F7F9FA;
  color: #111B2B;
}

.emotion-5:active,
.emotion-5:active:hover {
  background-color: #F7F9FA;
  border-color: #F7F9FA;
}

.emotion-5:focus {
  background-color: none;
  box-shadow: 0px 0px 0px 3px #E7EBEE;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
}

.emotion-2 {
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  display: inline-block;
  fill: #0059C8;
  height: 18px;
  width: 18px;
  fill: currentColor;
}

<li
  class="EntityListItem"
  data-test-id="cf-ui-entity-list-item"
>
  <article
    class="EntityListItem__inner EntityListItem__inner--with-actions"
  >
    <span
      class="emotion-6 EntityListItem__focus-trap"
      tabindex="-1"
    >
      <figure
        class="EntityListItem__media"
      >
        <svg
          class="emotion-0"
          data-test-id="cf-ui-icon"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M8 16h8v2H8zM8 12h8v2H8z"
          />
          <path
            d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
          />
        </svg>
      </figure>
      <div
        class="EntityListItem__content"
      >
        <div
          class="EntityListItem__heading"
        >
          <h1
            class="EntityListItem__title"
          >
            Title
          </h1>
          <div
            class="EntityListItem__content-type"
          >
            (
            Content type
            )
          </div>
        </div>
        <p
          class="EntityListItem__description"
        >
          Description
        </p>
      </div>
      <div
        class="EntityListItem__meta"
      >
        <div
          class="EntityListItem__status"
        >
          <div
            class="emotion-1"
            data-test-id="cf-ui-badge"
          >
            published
          </div>
        </div>
        <div
          class="Dropdown EntityListItem__actions"
          data-test-id="cf-ui-dropdown"
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            class="emotion-5"
            data-node-id="dropdown-trigger-61728000"
            label="Actions"
            type="button"
          >
            <span
              class="emotion-3"
            >
              <svg
                class="emotion-2"
                data-test-id="cf-ui-icon"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
                />
              </svg>
            </span>
            <span
              class="emotion-4"
            />
          </button>
        </div>
      </div>
    </span>
  </article>
</li>
`;
